# svhn_classification

./: .gitignore  01_svhn_classification.ipynb  02_transformers_svhn.ipynb  README.md  requirements-vit.txt  requirements.txt  svhn_classification.ipynb
svhn-cpp/: CMakeLists.txt  main.cpp
